# simple-agent

./: .gitignore  .mcp.json  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
docs/: api.md  help-command.md  project-structure.md
gradle/: libs.versions.toml
llm/: README-offline.md  push-model-to-device.ps1  start-llama-server.ps1
rag-server/: build.gradle.kts  settings.gradle.kts  start_rag.bat
rag_files/: IEEE-830-1998_RU.doc.docx
swarm-report/: dialog-validation-e2e-scenario.md  offline-llm-rag-e2e-scenario.md  offline-mode-2026-03-23.md  offline-mode-2026-03-24.md  offline-mode-e2e-scenario.md  offline-mode-main-plan.md  offline-mode-stage1-ollama-setup.md  offline-mode-stage2-service-layer.md  offline-mode-stage3-domain-di.md  offline-mode-stage4-presentation.md  offline-progress-bar-e2e-scenario.md  offline-rag-gemma3-plan.md  offline-rag-gemma3-stage-1.md  offline-rag-gemma3-stage-2.md  offline-rag-gemma3-stage-3.md  offline-rag-gemma3-stage-4.md  offline-rag-gemma3-validation-2026-03-26.md  ondevice-llm-2026-03-24.md  ondevice-llm-e2e-scenario.md  ondevice-llm-stage1-deps.md  ondevice-llm-stage2-service.md  ondevice-llm-stage3-di.md  ondevice-llm-stage4-ui.md  rag-feature-e2e-scenario.md  rag-rerank-e2e-scenario.md  rag-rerank-plan.md  rag-rerank-stage-1.md  rag-rerank-stage-2.md  rag-rerank-stage-3.md  rag-rerank-stage-4.md  rag-rerank-stage-5.md  rag-sources-e2e-scenario.md  rag-sources-plan.md  rag-sources-stage-1.md  rag-sources-stage-2.md  rag-sources-stage-3.md  rag-sources-stage-4.md  (+7 more)
(+167 files in other folders)
